[package]
name = "reformatters"
version = "0.1.0"
edition = "2021"
default-run = "gfs"

[dependencies]
anyhow = "1"
blosc = "0"
cached = "0"
console-subscriber = "0"
chrono = "0"
futures = "0"
gdal = { version = "0", features = ["array"] }
gdal-sys = { version = "0", features = ["bindgen"] }
itertools = "0"
ndarray = "0"
object_store = { version = "0", features = ["aws"] }
regex = "1"
reqwest = { version = "0", features = ["http2", "stream"] }
reqwest-retry = "0"
reqwest-middleware = "0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0" }
