[package]
name = "reformatters"
version = "0.1.0"
edition = "2021"
default-run = "gfs"

[dependencies]
anyhow = "1"
blosc = "0"
cached = "0"
console-subscriber = "0"
chrono = { version = "0", features = ["now"] }
futures = "0"
gdal = { version = "0", features = ["array"] }
gdal-sys = { version = "0", features = ["bindgen"] }
itertools = "0"
ndarray = "0"
object_store = { version = "0", features = ["aws"] }
once_cell = "1"
regex = "1"
reqwest = { version = "0", features = ["http2", "stream"] }
reqwest-retry = "0"
reqwest-middleware = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0" }
clap = { version = "4.5.7", features = ["derive"] }
backon = "0"
ndarray-interp = "0"
url = "2.5.2"
